--- a/package.json
+++ b/package.json
@@ -4,22 +4,39 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:server": "json-server server.json -p 3333 -w -d 500",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/themes": "^1.1.2",
     "@types/node": "20.5.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "eslint": "8.47.0",
+    "axios": "^1.5.0",
     "eslint-config-next": "13.4.19",
+    "lucide-react": "^0.269.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
+    "scheduler": "^0.23.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "use-context-selector": "^1.4.1",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
+    "eslint": "^8.47.0",
+    "json-server": "^0.17.3",
+    "prettier-plugin-tailwindcss": "^0.5.3"
   }
 }
